--- a/pokemon_game.html
+++ b/pokemon_game.html
@@ -11,6 +11,7 @@
     <div id="filter-buttons"></div>
     <div id="show-all-pokemon"></div>
     <div id="pokemon-container"></div>
+    <div id="saved-pokemon-container"></div>
 
     <script>
       //Her hentes div ifra HTML
@@ -71,6 +72,10 @@
         saveBtn.style.width = "50px";
         saveBtn.addEventListener("click", () => {
           savePokemon(pokemon);
+          const savedPokemonCard = document.createElement("div");
+          savedPokemonCard.innerHTML = "<h3>Dine lagrede Pokemons </h3>";
+
+          displaySavedPokemons(savedPokemon);
         });
 
         const deleteBtn = document.createElement("button");
@@ -135,18 +140,45 @@
       });
 
       function savePokemon(pokemon) {
-        let savedPokemons =
-          JSON.parse(localStorage.getItem("savedPokemons")) || [];
-        if (savedPokemons.length < 5) {
-          savedPokemons.push(pokemon);
-          localStorage.setItem("savedPokemons", JSON.stringify(savedPokemons));
-        } else {
-          alert(
-            "Du kan ikke lagre flere Pokemon! Vennligst slett en Pokemon for å fotsette"
-          );
+        try {
+          savedPokemons =
+            JSON.parse(localStorage.getItem("savedPokemons")) || [];
+          if (savedPokemons.length < 5) {
+            savedPokemons.push(pokemon);
+            localStorage.setItem(
+              "savedPokemons",
+              JSON.stringify(savedPokemons)
+            );
+          } else {
+            alert(
+              "Du kan ikke lagre flere Pokemon! Vennligst slett en Pokemon for å fotsette"
+            );
+          }
+        } catch {
+          console.error("Klarte ikke å lagre denne Pokemon!");
+        }
+
+        function displaySavedPokemons(pokemon) {
+          savedPokemon.innerHTML = "";
+
+          savedPokemon = JSON.parse(localStorage.getItem("savedPokemon")) || [];
+
+          savedPokemons.forEach((savedPokemon, index) => {
+            const savedPokemonCard = document.createElement("div");
+            savedPokemonCard.classList.add("saved-pokemon-card");
+
+            const pokemonCard = document.createElement("div");
+            pokemonCard.innerHTML = `
+                <p>Navn: ${pokemon.name}</p>
+                <p>Type: ${pokemon.types[0].type.name}</p>`;
+
+            //legge til nytt element(bilde)
+            const imgCard = document.createElement("img");
+            imgCard.src = pokemonImageUrl;
+            pokemonCard.appendChild(imgCard);
+          });
         }
       }
-
       fetchPokemon();
     </script>
   </body>
