--- a/pokemon_game.html
+++ b/pokemon_game.html
@@ -11,7 +11,7 @@
     <div id="filter-buttons"></div>
     <div id="show-all-pokemon"></div>
     <div id="pokemon-container"></div>
-    <div id="saved-pokemon-container"></div>
+    <div id="saved-pokemon-card"><h3>Mine lagrede Pokemons</h3></div>
 
     <script>
       //Her hentes div ifra HTML
@@ -72,8 +72,6 @@
         saveBtn.style.width = "50px";
         saveBtn.addEventListener("click", () => {
           savePokemon(pokemon);
-          const savedPokemonCard = document.createElement("div");
-          savedPokemonCard.innerHTML = "<h3>Dine lagrede Pokemons </h3>";
 
           displaySavedPokemons(savedPokemon);
         });
@@ -149,6 +147,16 @@
               "savedPokemons",
               JSON.stringify(savedPokemons)
             );
+
+            const savedPokemonHeader = document.createElement("h3");
+            savedPokemonHeader.textContent = "Dine lagrede Pokemons";
+
+            const savedPokemonContainer =
+              document.getElementById("saved-pokemon-card");
+            savedPokemonContainer.innerHTML = "";
+            savedPokemonContainer.appendChild(savedPokemonHeader);
+
+            displaySavedPokemons();
           } else {
             alert(
               "Du kan ikke lagre flere Pokemon! Vennligst slett en Pokemon for å fotsette"
@@ -158,12 +166,15 @@
           console.error("Klarte ikke å lagre denne Pokemon!");
         }
 
-        function displaySavedPokemons(pokemon) {
-          savedPokemon.innerHTML = "";
+        function displaySavedPokemons() {
+          const savedPokemonContainer =
+            document.getElementById("saved-pokemon-card");
+          savedPokemonContainer.innerHTML = "";
 
-          savedPokemon = JSON.parse(localStorage.getItem("savedPokemon")) || [];
+          const savedPokemons =
+            JSON.parse(localStorage.getItem("savedPokemons")) || [];
 
-          savedPokemons.forEach((savedPokemon, index) => {
+          savedPokemons.forEach((pokemon, index) => {
             const savedPokemonCard = document.createElement("div");
             savedPokemonCard.classList.add("saved-pokemon-card");
 
@@ -174,8 +185,11 @@
 
             //legge til nytt element(bilde)
             const imgCard = document.createElement("img");
-            imgCard.src = pokemonImageUrl;
+            imgCard.src = `https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/${pokemon.id}.png`;
             pokemonCard.appendChild(imgCard);
+
+            savedPokemonCard.appendChild(pokemonCard);
+            savedPokemonContainer.appendChild(savedPokemonCard);
           });
         }
       }
