--- a/pokemon_game.html
+++ b/pokemon_game.html
@@ -79,6 +79,10 @@
         const deleteBtn = document.createElement("button");
         deleteBtn.textContent = "Slett";
         deleteBtn.style.width = "50px";
+        deleteBtn.addEventListener("click", () => {
+          deletePokemon(pokemon);
+
+        }
 
         const editBtn = document.createElement("button");
         editBtn.textContent = "Endre";
