Fikset bug: Mine lagrede pokemons header

--- a/pokemon_game.html
+++ b/pokemon_game.html
@@ -73,7 +73,7 @@
         saveBtn.addEventListener("click", () => {
           savePokemon(pokemon);
 
-          displaySavedPokemons(savedPokemon);
+          displaySavedPokemons();
         });
 
         const deleteBtn = document.createElement("button");
@@ -151,8 +151,10 @@
               "savedPokemons",
               JSON.stringify(savedPokemons)
             );
-
+            await displaySavedPokemons();
+            /*
             const savedPokemonHeader = document.createElement("h3");
+
             savedPokemonHeader.textContent = "Mine lagrede Pokemons";
 
             const savedPokemonContainer =
@@ -160,7 +162,9 @@
             savedPokemonContainer.innerHTML = "";
             savedPokemonContainer.appendChild(savedPokemonHeader);
 
-            await displaySavedPokemons();
+            savedPokemonHeader.textContent = "Mine lagrede Pokemons";
+
+            await displaySavedPokemons();*/
           } else {
             alert(
               "Du kan ikke lagre flere Pokemon! Vennligst slett en Pokemon for å fotsette"
@@ -174,7 +178,11 @@
       function displaySavedPokemons() {
         const savedPokemonContainer =
           document.getElementById("saved-pokemon-card");
-        const savedPokemonHeader = savedPokemonContainer.querySelector("h3");
+        savedPokemonContainer.innerHTML = "";
+
+        const savedPokemonHeader = document.createElement("h3");
+        savedPokemonHeader.textContent = "Mine lagrede Pokémons:";
+        savedPokemonContainer.appendChild(savedPokemonHeader);
 
         const savedPokemons =
           JSON.parse(localStorage.getItem("savedPokemons")) || [];
@@ -210,7 +218,7 @@
           );
           localStorage.setItem("savedPokemons", JSON.stringify(savedPokemons));
 
-          createPokemonCard(pokemon);
+          displaySavedPokemons();
         }
       }
 
