--- a/pokemon_game.html
+++ b/pokemon_game.html
@@ -204,12 +204,16 @@
         function editPokemon(selectedPokemon) {
           const newPokemonName = prompt("Skriv inn det nye navnet:");
           const newPokemonType = prompt("Skriv inn hvilken type den skal ha:");
-          console.log("Nytt navn:", newPokemonName);
-          console.log("Ny type:", newPokemonType);
+
           if (newPokemonName && newPokemonType) {
             selectedPokemon.name = newPokemonName;
-            selectedPokemon.type = newPokemonType;
-            console.log("Endret Pokemon:", selectedPokemon);
+            selectedPokemon.types[0].type.name = newPokemonType;
+            const index = savedPokemons.findIndex(
+              (p) => p.id === selectedPokemon.id
+            );
+            if (index !== -1) {
+              savedPokemons[index] = selectedPokemon;
+            }
             localStorage.setItem(
               "savedPokemons",
               JSON.stringify(savedPokemons)
@@ -222,25 +226,6 @@
           savedPokemons =
             JSON.parse(localStorage.getItem("savedPokemons")) || [];
           displaySavedPokemons();
-        }
-        /*
-        function addName() {
-          const newPokemonName = prompt("Skriv inn nytt navn:");
-          localStorage.setItem("name", newPokemonName);
-        }
-
-        function updatePokemonName() {
-          nameTxt.innerHTML = `Navn: ${localStorage.getItem("name")}`;
-        }*/
-
-        function editPokemon(index) {
-          const newPokemonName = document.getElementById(
-            `nameInput-${index}`
-          ).value;
-
-          allPokemons[index].name = newPokemonName;
-
-          showAllPokemon();
         }
 
         fetchPokemon();
